--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon server.js",
+    "watch": "node server.js",
     "seed": "node seeders/seed.js"
   },
   "author": "",
